# blueberry

./: .gitignore  .gitmodules  README.md  build.sh  config.txt  docs.txt
.edkCode/: edk2_workspace_properties.json
build-tool/: Cargo.toml  Makefile
build-tool/.config/: config.toml
build-tool/Dell/: Cargo.toml
build-tool/Dell/src/: main.rs
build-tool/Menu/: Cargo.toml
build-tool/Menu/src/: main.rs  uart_debug.rs
build-tool/Size/: Cargo.toml
build-tool/Size/src/: main.rs
build-tool/src/: main.rs  uart2.rs  uart_debug.rs
